<resources>
    <string name="app_name">Recetas</string>
    <string name="title_activity_generar_menu">"Generate menu "</string>

    <!--Strings used for InsertarPLato -->
    <string name="Dish_Name">Name</string>
    <string name="Description_Dish">Description</string>
    <string name="Protein">Protein(g)</string>
    <string name="Calorie">Calorie(Kcal)</string>
    <string name="Carbohydrate">Carbohydrate(g)</string>
    <string name="Fat">Fat(g)</string>
    <string name="Allergen">Allergen</string>
    <string name="Is_In_Restaurant">Is in restaurant</string>
    <string name="Food_day">Food of the day</string>
    <string name="Breakfast">Breakfast</string>
    <string name="Lunch">Lunch</string>
    <string name="Dinner">Dinner</string>
    <string name="Recipe">Recipe</string>
    <string name="Link_Of_interest">Link of interest</string>
    <string name="Gluten">Gluten</string>
    <string name="Crustacean">Crustacean</string>
    <string name="Egg">Egg</string>
    <string name="Fish">Fish</string>
    <string name="Dried_Fruit">Dried fruit</string>
    <string name="Soy">Soy</string>
    <string name="Dairy">Dairy</string>
    <string name="Mollusk">Mollusk</string>
    <string name="Mustard">Mustard</string>
    <string name="Celery">Celery</string>
    <string name="Lupine">Lupine</string>
    <string name="Sesame">Sesame</string>
    <string name="Sulfur_Dioxide">Sulfur dioxide</string>
    <string name="Restaurant">Restaurant</string>
    <string name="Address">Address</string>
    <string name="Web">Web</string>
    <string name="Add">Add</string>
    <string name="Cancel">Cancel</string>
    <string name="Ok">Ok</string>
    <string name="AddDishMessageTitle">Add Dish</string>
    <string name="AddDishMessage">Are you sure you want to add the dish?</string>
    <string name="AddDishSuccessfully">Dish added successfully</string>
    <string name="AddDishError">Error adding plate.</string>
    <string name="AddRestaurantError">Error adding restaurant.</string>
    <string name="Error">Error</string>
    <string name="ErrorMessageDishName">The name of the dish cannot be empty.</string>
    <string name="ErrorMessageProtein">The protein filter cannot be empty.</string>
    <string name="ErrorMessageFat">The fat filter cannot be empty.</string>
    <string name="ErrorMessageCalorie">The calorie filter cannot be empty.</string>
    <string name="ErrorMessageCarbohydrate">The carbohydrate filter cannot be empty.</string>
    <string name="ErrorMessageCategory">The category filter cannot be empty.</string>
    <string name="ErrorMessageRestaurantName">The name of the restaurant cannot be empty.</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="rango1cal" translatable="false">[0-1500 Kcal]</string>
    <string name="rango2cal" translatable="false">[1500-2500 Kcal]</string>
    <string name="rango3cal" translatable="false">[>2500 Kcal]</string>
    <string name="rango1prot" translatable="false">[0-100 g]</string>
    <string name="rango2prot" translatable="false">[100-200 g]</string>
    <string name="rango3prot" translatable="false">[>200 g]</string>
    <string name="rango1fat" translatable="false">[0-50 g]</string>
    <string name="rango2fat" translatable="false">[50-100 g]</string>
    <string name="rango3fat" translatable="false">[>100 g]</string>
    <string name="rango1carb" translatable="false">[0-50 g]</string>
    <string name="rango2carb" translatable="false">[50-100 g]</string>
    <string name="rango3carb" translatable="false">[>100 g]</string>
    <string name="ListMenuMessageTitle">List Menu</string>
    <string name="ListMenuMessage">Are you sure you want to list the menu?</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>

    <string name="Type">Type</string>
    <string name="Category">Category</string>

    <string name="Homemade">HomeMade</string>
    <string name="list_menu">List Menu</string>

    <string name="SelectOneDish">Select one dish of each type</string>

    <string name="ViewMoreDetails">View More</string>

    <string name="RestaurantName">Restaurant Name</string>
    <string name="RestaurantAddress">Restaurant Address</string>
    <string name="RestaurantWeb">Web of the restaurant</string>

    <string name="URL">URL</string>

    <string name="NoDish">No dish with these characteristics has been found </string>
    <string name="NoBreakFast">No breakFast with these characteristics has been found </string>
    <string name="NoLunch">No lunch with these characteristics has been found </string>
    <string name="NoDinner">No dinner with these characteristics has been found </string>

    <string name="GenerateMenu">Generate Menu</string>
    <string name="InsertDish">Insert Dish</string>


    <string name="ShowProtein">Protein(g):</string>
    <string name="ShowCalorie">Calorie(Kcal):</string>
    <string name="ShowCarbohydrate">Carbohydrate(g):</string>
    <string name="ShowFat">Fat(g):</string>
    <string name="ShowAllergen">Allergen:</string>
    <string name="ShowType">Type:</string>
    <string name="ShowCategory">Category:</string>


</resources>