<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewSeleccionar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SelectOneDish"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewBreakFast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Breakfast"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listaPlatosDesayuno"
            android:layout_width="match_parent"
            android:layout_height="398dp"
            android:layout_weight=".9" />

        <TextView
            android:id="@+id/textViewLunch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Lunch"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listaPlatosAlmuerzos"
            android:layout_width="match_parent"
            android:layout_height="398dp"
            android:layout_weight=".9" />

        <TextView
            android:id="@+id/textViewDinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Dinner"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listaPlatosCenas"
            android:layout_width="match_parent"
            android:layout_height="398dp"
            android:layout_weight=".9" />

    </LinearLayout>
</LinearLayout>